--- a/baitap.html
+++ b/baitap.html
@@ -119,11 +119,11 @@
       </div>
     </div>
     <!--HET PHAN 1-->
-    <!--BAT DAU PHAN 2-->
+    <!--BAT DAU PHAN 2 // Bai tap in ra 7 ngay tiep theo-->
     <div class="p2">
       <span id="today" style="color: black"></span>
       <div id="day">
-
+       <!-- them trong js -->
       </div>
     </div>
     <!--HET PHAN 2-->
